Added container configurations; Implemented docker-compose; Added laravel files

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ modules.xml
 .idea/sonarlint
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm+all,composer,laravel
+www/CONTAINER_ALREADY_RAN_ONCE
