--- a/.docker/laravel/Dockerfile.prod
+++ b/.docker/laravel/Dockerfile.prod
@@ -1,8 +1,38 @@
 #@version 3.7.5
 
-FROM yurikoster1/laravel_base as laravel_publish
+FROM php:7.4.8-fpm-alpine3.12 AS builder
+MAINTAINER Yuri Koster <yurikoster1@gmail.com>
+
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+RUN apk add  --no-cache nodejs npm
+RUN docker-php-ext-install pdo pdo_mysql && docker-php-ext-enable pdo_mysql pdo
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+EXPOSE 9000
 
 COPY ./www /var/www/html
 
+WORKDIR /var/www/html
+
+RUN composer install \
+    && cp .env.example .env \
+    && php artisan key:generate \
+    && php artisan config:clear \
+    && npm install \
+    && npm audit fix \
+    && npm run prod
+
+ENTRYPOINT ["php-fpm"]
+
+FROM php:7.4.8-fpm-alpine3.12 as laravel_publish
+RUN docker-php-ext-install pdo pdo_mysql && docker-php-ext-enable pdo_mysql pdo
+EXPOSE 9000
+WORKDIR /var/www/
+COPY --from=builder /var/www/ .
+WORKDIR /var/www/html
+COPY ./.docker/laravel/entrypoint-prod.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
 
