--- a/docker-compose.cloudbuild.yml
+++ b/docker-compose.cloudbuild.yml
@@ -4,8 +4,10 @@ services:
   #PHP
   devops_1_app:
     build:
-      context: .docker/laravel
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: .docker/laravel/Dockerfile
+      target: base
+    entrypoint: 'php-fpm'
     image: yurikoster1/laravel_base
     depends_on:
       - "devops_1_app-database"
