--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -13,7 +13,7 @@ steps:
 
   - id: "Running Dokcer logs on laravel_app"
     name: 'gcr.io/cloud-builders/docker'
-    args: ["logs", "laravel_app"]
+    args: ["logs", "laravel_mysql"]
 
   - id: "Chown in /var/www"
     name: 'gcr.io/cloud-builders/docker'
@@ -34,4 +34,8 @@ steps:
   - id: "Migrating"
     name: 'gcr.io/cloud-builders/docker'
     args: ['exec','-t','laravel_app','php','/var/www/html/artisan', 'migrate']
+
+  - id: "Running phpunit"
+    name: 'gcr.io/cloud-builders/docker'
+    args: ['exec','-t','laravel_app','php','/var/www/vendor/bin/phpuint', '-c', '/var/www/html/phpunit.xml']
 
