--- a/docker-compose.cloudbuild.yml
+++ b/docker-compose.cloudbuild.yml
@@ -76,8 +76,8 @@ services:
     container_name: laravel_mysql
     ports:
       - "3306:3306"
-#    volumes:
-#      - devops_1_dbdata:/var/lib/mysql
+    volumes:
+      - devops_1_dbdata:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 20s
@@ -103,12 +103,12 @@ networks:
     labels:
      yuri.project.name: ${COMPOSE_PROJECT_NAME}
 
-#volumes:
-#  devops_1_dbdata:
-#    driver: local
+volumes:
+  devops_1_dbdata:
+    driver: local
 #    driver_opts:
 #        type: none
 #        o: bind
 #        device: "${PWD}/.docker/mysql/data"
-#    labels:
-#      yuri.project.name: ${COMPOSE_PROJECT_NAME}
+    labels:
+      yuri.project.name: ${COMPOSE_PROJECT_NAME}
