--- a/docker-compose.cloudbuild.yml
+++ b/docker-compose.cloudbuild.yml
@@ -63,8 +63,8 @@ services:
     build:
       context: .docker/mysql
       dockerfile: Dockerfile
-    user: "1000:1000"
-    command: --default-authentication-plugin=mysql_native_password
+#    user: "1000:1000"
+    command: --default-authentication-plugin=mysql_native_password --innodb-use-native-aio=0
     environment:
       MYSQL_DATABASE: ${COMPOSE_PROJECT_NAME}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
